fix text of calendar events jumping around when you hover over them

--- a/app/calendar/CalendarEvent.styl
+++ b/app/calendar/CalendarEvent.styl
@@ -59,4 +59,5 @@
 	border-top: solid 1px #aaa
 	border-right: solid 1px #aaa
 	border-bottom: solid 1px #aaa
+	padding-right: 1px
 	margin-top: -1px
